Add progress bar for human language and styles.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <a href="#contact" aria-label="Go to the contact section">Contact</a>
                 </li>
                 <li>
+                    <!-- add the download button to the navigation-->
                     <a href="/assets/document/Anjalee_Kulasinghe_CV.pdf" download class="button" onclick="alert('Download my full resume')">
-                        <!-- <button type="button" onclick="alert('Download my full resume')">Download CV</button> -->
                         Download CV
                     </a>
                 </li>
@@ -201,6 +201,7 @@
     <section id="skills">
         <h1><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
 
+        <!-- expertise / soft skills -->
         <div class="skill-box">
             <h3>Resilience</h3>
         </div>
@@ -221,7 +222,31 @@
             <h3>Leadership and Coaching</h3>
         </div>
 
+        <!-- human language skills -->
+        <div class="language">
+            
+                <h2>Language skills (human)</h2>
 
+                
+                <div class="wrapper">
+                    <label for="sin">Sinhala</label>
+			        <div class="progress-bar">
+                        <span class="progress-bar-fill" style="width: 95%;" id="sin">Mother tongue</span>
+			        </div>
+
+                    <label for="eng">English</label>
+			        <div class="progress-bar">
+                        <span class="progress-bar-fill" style="width: 85%;" id="eng">Professional</span>
+			        </div>
+
+                    <label for="swe">Swedish</label>
+			        <div class="progress-bar">
+                        <span class="progress-bar-fill" style="width: 25%;" id="swe">Beginner</span>
+			        </div>
+		        </div>
+        </div>
+
+        <!-- computher languages / hard skills -->
 
     </section>
     <!-- end of the skills and expertise section -->
