Modi: progress bar styles for human languages.

--- a/index.html
+++ b/index.html
@@ -227,7 +227,6 @@
             
                 <h2>Language skills (human)</h2>
 
-                
                 <div class="wrapper">
                     <label for="sin">Sinhala</label>
 			        <div class="progress-bar">
@@ -247,6 +246,9 @@
         </div>
 
         <!-- computher languages / hard skills -->
+        <div class="tech-lan">
+            <h2>Tech Languages</h2>
+        </div>
 
     </section>
     <!-- end of the skills and expertise section -->
