Modi: re-arrange the skills section and change the style.

--- a/index.html
+++ b/index.html
@@ -239,16 +239,19 @@
             <div class="column">
                 <div class="hlan-tools-box">
                     <div class="hlan">
-                        <h2>Language skills (human)</h2>
+                        <h2>Language skills (human) <i class="fa-solid fa-globe"></i></h2>
+                        <hr>
                         <ul>
                             <li><strong>Sinhala: </strong>Native</li>
                             <li><strong>English: </strong>Fluent</li>
                             <li><strong>Swedish: </strong>Beginner</li>
                         </ul>
+                        <br>
                     </div> <!-- end hlan class -->
                     <br>
                     <div class="tools">
-                        <h2>Tools</h2>
+                        <h2>Tools <i class="fa-solid fa-screwdriver-wrench"></i></h2>
+                        <hr>
                         <div class="grid-container">
                             <div class="item1">MS office</div>
                             <div class="item2">Visual studio</div>
@@ -259,6 +262,7 @@
                             <div class="item7">After Effects</div>
                             <div class="item8">Flash</div>
                         </div>
+                        <br>
                     </div> <!-- end tools class -->
                 </div>
                 <!--end of class hlan-tools-box-->
@@ -266,7 +270,8 @@
 
             <div class="column">
                 <div class="tech-lan">
-                    <h2>Tech Languages</h2>
+                    <h2>Tech Languages <i class="fa-solid fa-microchip"></i></h2>
+                    <hr>
                     <div class="wrapper">
                         <label for="html">HTML</label>
                         <div class="progress-bar">
