modi: assets link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="anjalee kulasinghe, cv, skill, education, experience">
     <meta name="author" content="Anjalee Kulasinghe">
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <title>CV_AK</title>
 
@@ -19,7 +19,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="/assets/images/LOGO_AK.jpg" alt="logo" id="logo"> <!-- logo on the top left -->
+            <img src="./assets/images/LOGO_AK.jpg" alt="logo" id="logo"> <!-- logo on the top left -->
         </a>
 
         <!-- start of top navigation -->
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <!-- add the download button to the navigation-->
-                    <a href="/assets/document/Anjalee_Kulasinghe_CV.pdf" download aria-label="download the CV"
+                    <a href="./assets/document/Anjalee_Kulasinghe_CV.pdf" download aria-label="download the CV"
                         onclick="alert('Download my full resume')">
                         Download CV
                     </a>
@@ -57,7 +57,7 @@
     <!-- start of the home section -->
     <section id="main">
         <div>
-            <img src="/assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img">
+            <img src="./assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img">
             <!-- image on the side -->
         </div>
         <div id="welcome">
@@ -340,7 +340,7 @@
             <div class="con-column">
                 <!-- Profile image -->
                 <div id="p-img">
-                    <img src="/assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="150"
+                    <img src="./assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="150"
                         height="200">
                 </div>
 
