Modi: change the short id and class names into full name

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- start of the experience section -->
     <section id="experience">
         <h1>Experience <i class="fa-solid fa-briefcase"></i></h1>
-        <div id="exp1" class="inner-box float-left">
+        <div id="experience1" class="inner-box float-left">
             <h2><strong>Expert & Scrum Master</strong></h2>
             <h2>H&M Group - Stockholm, Sweden</h2>
             <h3>May 2021 - Present</h3>
@@ -103,7 +103,7 @@
             </ul>
         </div>
 
-        <div id="exp2" class="inner-box">
+        <div id="experience2" class="inner-box">
             <h2><strong>Visual Merchandiser for H&M Men and H&M Home</strong></h2>
             <h2>H&M - Stockholm, Sweden</h2>
             <h3>December 2018 - May 2021</h3>
@@ -131,7 +131,7 @@
             </ul>
         </div>
 
-        <div id="exp3" class="inner-box">
+        <div id="experience3" class="inner-box">
             <h2><strong>Lecture & Head teacher</strong></h2>
             <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
             <h3>January 2009 - August 2017</h3>
@@ -161,7 +161,7 @@
     <!-- start of the education section -->
     <section id="education">
         <h1><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
-        <div class="edu-box">
+        <div class="education-box">
             <ul>
                 <li><strong>Code Institute - Ireland</strong></li>
                 <li>Jul 2023 - Precent</li>
@@ -169,7 +169,7 @@
             </ul>
         </div>
 
-        <div class="edu-box">
+        <div class="education-box">
             <ul>
                 <li><strong>Halmstad University - Sweden</strong></li>
                 <li>Mar 2023 - Jun 2023</li>
@@ -177,7 +177,7 @@
             </ul>
         </div>
 
-        <div class="edu-box">
+        <div class="education-box">
             <ul>
                 <li><strong>Stockholm University - Sweden</strong></li>
                 <li>Aug 2017 - Precent</li>
@@ -185,7 +185,7 @@
             </ul>
         </div>
 
-        <div class="edu-box">
+        <div class="education-box">
             <ul>
                 <li><strong>Cardiff Metropolitan University- UK</strong></li>
                 <li>Oct 2012 - Mar 2014</li>
@@ -193,7 +193,7 @@
             </ul>
         </div>
 
-        <div class="edu-box">
+        <div class="education-box">
             <ul>
                 <li><strong>SLIIT- Sri Lanka</strong></li>
                 <li>Jan 2003 - Oct 2007</li>
@@ -237,8 +237,8 @@
 
         <div class="language">
             <div class="column">
-                <div class="hlan-tools-box">
-                    <div class="hlan">
+                <div class="human-language-tools-box">
+                    <div class="human-language">
                         <h2>Language skills (human) <i class="fa-solid fa-globe"></i></h2>
                         <hr>
                         <ul>
@@ -247,7 +247,7 @@
                             <li><strong>Swedish: </strong>Beginner</li>
                         </ul>
                         <br>
-                    </div> <!-- end hlan class -->
+                    </div> <!-- end human-language class -->
                     <br>
                     <div class="tools">
                         <h2>Tools <i class="fa-solid fa-screwdriver-wrench"></i></h2>
@@ -265,11 +265,11 @@
                         <br>
                     </div> <!-- end tools class -->
                 </div>
-                <!--end of class hlan-tools-box-->
+                <!--end of class human-language-tools-box-->
             </div>
 
             <div class="column">
-                <div class="tech-lan">
+                <div class="tech-languages">
                     <h2>Tech Languages <i class="fa-solid fa-microchip"></i></h2>
                     <hr>
                     <div class="wrapper">
@@ -298,7 +298,7 @@
                             <span class="progress-bar-fill" style="width: 35%;" id="sql">35%</span>
                         </div>
                     </div> <!-- end class wrapper -->
-                </div> <!-- end class tech-lan -->
+                </div> <!-- end class tech-languages -->
             </div>
         </div> <!-- end class language -->
     </section>
@@ -311,8 +311,8 @@
         <h1><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
 
         <div class="contact-me">
-            <div class="con-column">
-                <form action="https://gmail.com" method="post" class="contact-form">
+            <div class="contact-column">
+                <form action="#" method="post" class="contact-form">
                     <fieldset>
                         <div>
                             <label for="fname">First Name</label><br>
@@ -337,9 +337,9 @@
             <!--end of left column content (form)-->
 
 
-            <div class="con-column">
+            <div class="contact-column">
                 <!-- Profile image -->
-                <div id="p-img">
+                <div id="rofile-image">
                     <img src="./assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="150"
                         height="200">
                 </div>
