Modi: change the stylein the experiance1,2 and 3.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- start of the experience section -->
     <section id="experience">
         <h1>Experience <i class="fa-solid fa-briefcase"></i></h1>
-        <div id="experience1" class="inner-box float-left">
+        <div id="experience1" class="inner-box">
             <h2><strong>Expert & Scrum Master</strong></h2>
             <h2>H&M Group - Stockholm, Sweden</h2>
             <h3>May 2021 - Present</h3>
