Fix:alignment issue in the welcome message.

--- a/index.html
+++ b/index.html
@@ -53,19 +53,21 @@
 
 
     <!-- start of the home section -->
-    <section id="main">
-        <div>
-            <!-- image on the side -->
+    <section class="home-section flex" id="main">
+        <div class="one-third-width-column">
+            <!-- image on the left side -->
             <img src="./assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img">
         </div>
-        <div id="welcome">
-            <p>Hey there!</p>
-            <p>My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you can call me
-                <strong style="color: #331D2C;"> ANJI. </strong>
-            </p>
-            <p>I am a Business Expert and a Scrum Master at H&M Group.</p>
-            <p>... and I am just a human who likes to enjoy life!</p>
-            </p>
+        <div class="two-thirds-width-column vertical-center">
+            <div id="welcome">
+                <p>Hey there!<br>
+                    My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you can call me
+                    <strong style="color: #331D2C;"> ANJI. </strong>
+                    <br>
+                    I am a Business Expert and a Scrum Master at H&M Group.<br>
+                    ... and I am just a human who likes to enjoy life!
+                </p>
+            </div>
         </div>
     </section>
     <!-- end of the home section -->
@@ -73,81 +75,97 @@
 
 
     <!-- start of the experience section -->
-    <section id="experience">
+    <section class="experience-section" id="experience">
         <h1>Experience <i class="fa-solid fa-briefcase"></i></h1>
-        <div id="experience1" class="inner-box">
-            <h2><strong>Expert & Scrum Master</strong></h2>
-            <h2>H&M Group - Stockholm, Sweden</h2>
-            <h3>May 2021 - Present</h3>
-            <hr>
+        <div>
+            <div id="experience1" class="inner-box">
+                <h2><strong>Expert & Scrum Master</strong></h2>
+                <h2>H&M Group - Stockholm, Sweden</h2>
+                <h3>May 2021 - Present</h3>
+                <hr>
 
-            <p>Replenishment Precision is a product under Inventory optimization (SAP ECC module). The product ensures
-                stock availability in store at the right time and place while helping to increase revenue by focusing on
-                full-price selling. </p><br>
-            <ul class="inside">
-                <li>Creating business case, solving complex problems, requirement gathering and facilitating design
-                    thinking in supporting
-                    the team to understand business needs, leading to a better product.</li>
-                <li>Guide the team and connect the stakeholders throughout developments. Building the bridge between
-                    business and tech to
-                    ease out communication and functional bottlenecks.</li>
-                <li>Responsible for creating the release notes related to the Replenishment product.</li>
-                <li>Single Point Of Contact: When lanching the system to new markets. Organized and conduct the monthly
-                    superuser forum to
-                    stay close contact with the end users and stakeholders.</li>
-                <li>Collaborating with the product owner on defining product strategy and roadmap.</li>
-            </ul>
-        </div>
+                <p>Replenishment Precision is a product under Inventory optimization (SAP ECC module). The product
+                    ensures
+                    stock availability in store at the right time and place while helping to increase revenue by
+                    focusing on
+                    full-price selling. </p><br>
+                <ul class="inside">
+                    <li>Creating business case, solving complex problems, requirement gathering and facilitating design
+                        thinking in supporting
+                        the team to understand business needs, leading to a better product.</li>
+                    <li>Guide the team and connect the stakeholders throughout developments. Building the bridge between
+                        business and tech to
+                        ease out communication and functional bottlenecks.</li>
+                    <li>Responsible for creating the release notes related to the Replenishment product.</li>
+                    <li>Single Point Of Contact: When lanching the system to new markets. Organized and conduct the
+                        monthly
+                        superuser forum to
+                        stay close contact with the end users and stakeholders.</li>
+                    <li>Collaborating with the product owner on defining product strategy and roadmap.</li>
+                </ul>
+            </div>
+            <!-- end of experience1 -->
 
-        <div id="experience2" class="inner-box">
-            <h2><strong>Visual Merchandiser for H&M Men and H&M Home</strong></h2>
-            <h2>H&M - Stockholm, Sweden</h2>
-            <h3>December 2018 - May 2021</h3>
-            <hr>
+            <div id="experience2" class="inner-box">
+                <h2><strong>Visual Merchandiser for H&M Men and H&M Home</strong></h2>
+                <h2>H&M - Stockholm, Sweden</h2>
+                <h3>December 2018 - May 2021</h3>
+                <hr>
 
-            <ul class="inside">
-                <li>Secured and optimized the best customer offering by curating site that meets commerciality,
-                    customers
-                    needs in line with H&M brand. Collaborate and align with the stories and local relevant content to
-                    ensure the omni
-                    channel experience.</li>
-                <li>Knowledge related to consumer behavior and did the communication targeting the proper customer group
-                    via
-                    segmentation (what, who and when).</li>
-                <li>Subject matter expert for AEM and SAP Hybris systems. Deliver the training to the new VMs and
-                    supporting
-                    to test the functionalities of AEM. Help to create the training materials. Take part in site
-                    development
-                    projects to
-                    visual merchandising and user experience. Help with technical upgrade testing and testing the site
-                    (mobile,
-                    desktop, app) during tech release.</li>
-                <li>Analyze and generate weekly, monthly, and quarterly report of UX with visualization and build strong
-                    action plan to meet selling KPI (Using Google analytics, Power BI and Tableau).</li>
-            </ul>
-        </div>
+                <ul class="inside">
+                    <li>Secured and optimized the best customer offering by curating site that meets commerciality,
+                        customers
+                        needs in line with H&M brand. Collaborate and align with the stories and local relevant content
+                        to
+                        ensure the omni
+                        channel experience.</li>
+                    <li>Knowledge related to consumer behavior and did the communication targeting the proper customer
+                        group
+                        via
+                        segmentation (what, who and when).</li>
+                    <li>Subject matter expert for AEM and SAP Hybris systems. Deliver the training to the new VMs and
+                        supporting
+                        to test the functionalities of AEM. Help to create the training materials. Take part in site
+                        development
+                        projects to
+                        visual merchandising and user experience. Help with technical upgrade testing and testing the
+                        site
+                        (mobile,
+                        desktop, app) during tech release.</li>
+                    <li>Analyze and generate weekly, monthly, and quarterly report of UX with visualization and build
+                        strong
+                        action plan to meet selling KPI (Using Google analytics, Power BI and Tableau).</li>
+                </ul>
+            </div>
+            <!-- end of experience2 -->
+            <div id="experience3" class="inner-box">
+                <h2><strong>Lecture & Head teacher</strong></h2>
+                <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
+                <h3>January 2009 - August 2017</h3>
+                <hr>
 
-        <div id="experience3" class="inner-box">
-            <h2><strong>Lecture & Head teacher</strong></h2>
-            <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
-            <h3>January 2009 - August 2017</h3>
-            <hr>
-
-            <ul class="inside">
-                <li>Head teacher for the subject ICT and the ICT lab in charge of the Kandy branch of Sussex college
-                    network. Team member for the panel of ICT curriculum development and exam paper preparation panel
-                    for
-                    the network from Grade 1 to Grade 13 (20 colleges spread throughout 8 provinces in Sri Lanka).</li>
-                <li>Delivered engaging and comprehensive lectures on various Information Technology (IT) subjects,
-                    including
-                    programming languages, databases, project management, web development and MS Office (1000+ students)
-                </li>
-                <li>Employed various teaching methodologies, such as lectures, discussions,demonstrations, workshops and
-                    multimedia presentations, to facilitate student understanding and engagement</li>
-                <li>Provided guidance and support to students in their academic and career development, offering
-                    mentorship
-                    and advice on IT-related topics (200+ students. Most of them work in the IT related industry).</li>
-            </ul>
+                <ul class="inside">
+                    <li>Head teacher for the subject ICT and the ICT lab in charge of the Kandy branch of Sussex college
+                        network. Team member for the panel of ICT curriculum development and exam paper preparation
+                        panel
+                        for
+                        the network from Grade 1 to Grade 13 (20 colleges spread throughout 8 provinces in Sri Lanka).
+                    </li>
+                    <li>Delivered engaging and comprehensive lectures on various Information Technology (IT) subjects,
+                        including
+                        programming languages, databases, project management, web development and MS Office (1000+
+                        students)
+                    </li>
+                    <li>Employed various teaching methodologies, such as lectures, discussions,demonstrations, workshops
+                        and
+                        multimedia presentations, to facilitate student understanding and engagement</li>
+                    <li>Provided guidance and support to students in their academic and career development, offering
+                        mentorship
+                        and advice on IT-related topics (200+ students. Most of them work in the IT related industry).
+                    </li>
+                </ul>
+            </div>
+            <!-- end of experience3 -->
         </div>
     </section>
     <!-- end of the experience section -->
@@ -155,7 +173,7 @@
 
 
     <!-- start of the education section -->
-    <section id="education">
+    <section class="education-section" id="education">
         <h1><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
         <div class="education-box">
             <ul>
@@ -202,11 +220,11 @@
 
 
     <!-- start of the skills and expertise section -->
-    <section id="skills">
+    <section class="skills-section" id="skills">
         <h1><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
         <br>
 
-        <div class="expertise">
+        <div id="expertise">
             <!-- expertise / soft skills -->
             <h2>Expertise</h2>
             <div class="skill-box">
@@ -231,7 +249,7 @@
         </div> <!-- end expertiseexpertise -->
 
 
-        <div class="language">
+        <div id="language">
             <div class="column">
                 <div class="human-language-tools-box">
                     <div class="human-language">
@@ -303,19 +321,19 @@
 
 
     <!-- contact section start -->
-    <section id="contact">
+    <section class="contact-section" id="contact">
         <h1><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
 
         <div class="contact-me">
             <div class="contact-column">
                 <!-- Profile image -->
                 <div id="profile-image">
-                    <img src="./assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="150"
-                        height="200">
+                    <img src="./assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="400%"
+                        height="100%">
                 </div>
 
                 <!-- personal information -->
-                <div>
+                <div id="personal-information">
                     <h2>Anjalee Kulasinghe</h2>
                     <h3>Business and Requirement Analysis | Business Expert | Scrum Master | Project Manager</h3>
                     <br>
@@ -357,8 +375,15 @@
                             <label for="email">Email Address</label><br>
                             <input id="email" type="email" name="email" class="text-input" required><br><br>
                         </div>
+
+                        <div>
+                            <label for="message">Your Message</label><br>
+                            <textarea name="message" id="message" cols="60" rows="6"
+                                placeholder="Click to type your messages" class="text-input" required></textarea>
+                        </div>
                     </fieldset>
 
+                    <!-- form buttons -->
                     <input type="submit" value="Submit" class="send-button">
                     <input type="reset" value="Reset Form">
                 </form>
