modi: Responsive welcome image.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
     <!-- start of the home section -->
-    <section class="home-section flex" id="main">
+    <section class="home-section" id="main">
         <div class="one-third-width-column">
             <!-- image on the left side -->
             <img src="./assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img">
