fix: text alignment in expertise section and the hidden heading.

--- a/index.html
+++ b/index.html
@@ -175,44 +175,46 @@
     <!-- start of the education section -->
     <section class="education-section" id="education">
         <h1><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
-        <div class="education-box">
-            <ul>
-                <li><strong>Code Institute - Ireland</strong></li>
-                <li>Jul 2023 - Precent</li>
-                <li>Diploma: Full Stack Software Development</li>
-            </ul>
-        </div>
+        <div>
+            <div class="education-box">
+                <ul>
+                    <li><strong>Code Institute - Ireland</strong></li>
+                    <li>Jul 2023 - Precent</li>
+                    <li>Diploma: Full Stack Software Development</li>
+                </ul>
+            </div>
 
-        <div class="education-box">
-            <ul>
-                <li><strong>Halmstad University - Sweden</strong></li>
-                <li>Mar 2023 - Jun 2023</li>
-                <li>Master's (one subject): AI and Data Strategy</li>
-            </ul>
-        </div>
+            <div class="education-box">
+                <ul>
+                    <li><strong>Halmstad University - Sweden</strong></li>
+                    <li>Mar 2023 - Jun 2023</li>
+                    <li>Master's (one subject): AI and Data Strategy</li>
+                </ul>
+            </div>
 
-        <div class="education-box">
-            <ul>
-                <li><strong>Stockholm University - Sweden</strong></li>
-                <li>Aug 2017 - Precent</li>
-                <li>Master in Computer and System Science</li>
-            </ul>
-        </div>
+            <div class="education-box">
+                <ul>
+                    <li><strong>Stockholm University - Sweden</strong></li>
+                    <li>Aug 2017 - Precent</li>
+                    <li>Master in Computer and System Science</li>
+                </ul>
+            </div>
 
-        <div class="education-box">
-            <ul>
-                <li><strong>Cardiff Metropolitan University- UK</strong></li>
-                <li>Oct 2012 - Mar 2014</li>
-                <li>Master of Business Administration (MBA)</li>
-            </ul>
-        </div>
+            <div class="education-box">
+                <ul>
+                    <li><strong>Cardiff Metropolitan University- UK</strong></li>
+                    <li>Oct 2012 - Mar 2014</li>
+                    <li>Master of Business Administration (MBA)</li>
+                </ul>
+            </div>
 
-        <div class="education-box">
-            <ul>
-                <li><strong>SLIIT- Sri Lanka</strong></li>
-                <li>Jan 2003 - Oct 2007</li>
-                <li>Bachelor of Science (B.Sc.) in Information Technology</li>
-            </ul>
+            <div class="education-box">
+                <ul>
+                    <li><strong>SLIIT- Sri Lanka</strong></li>
+                    <li>Jan 2003 - Oct 2007</li>
+                    <li>Bachelor of Science (B.Sc.) in Information Technology</li>
+                </ul>
+            </div>
         </div>
     </section>
     <!-- end of the education section -->
@@ -225,29 +227,30 @@
         <br>
 
         <div id="expertise">
-            <!-- expertise / soft skills -->
-            <h2>Expertise</h2>
-            <div class="skill-box">
-                <h3>Resilience</h3>
-            </div>
+            <div>
+                <!-- expertise / soft skills -->
+                <h2>Expertise</h2>
+                <div class="skill-box">
+                    <h3>Resilience</h3>
+                </div>
 
-            <div class="skill-box">
-                <h3>Communication</h3>
-            </div>
+                <div class="skill-box">
+                    <h3>Communication</h3>
+                </div>
 
-            <div class="skill-box">
-                <h3>Teamwork</h3>
-            </div>
+                <div class="skill-box">
+                    <h3>Teamwork</h3>
+                </div>
 
-            <div class="skill-box">
-                <h3>Adaptability</h3>
-            </div>
+                <div class="skill-box">
+                    <h3>Adaptability</h3>
+                </div>
 
-            <div class="skill-box">
-                <h3>Leadership and Coaching</h3>
+                <div class="skill-box">
+                    <h3>Leadership and Coaching</h3>
+                </div>
             </div>
-        </div> <!-- end expertiseexpertise -->
-
+        </div><!-- end expertiseexpertise -->
 
         <div id="language">
             <div class="column">
