Add the initial layout of the ReadMe file.

--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
                         <h2>Language skills (human) <i class="fa-solid fa-globe"></i></h2>
                         <hr>
                         <ul>
-                            <li><strong>Sinhala: </strong>Native</li>
-                            <li><strong>English: </strong>Fluent</li>
-                            <li><strong>Swedish: </strong>Beginner</li>
+                            <li><strong class="hidden-small">Sinhala: </strong>Native</li>
+                            <li><strong class="hidden-small">English: </strong>Fluent</li>
+                            <li><strong class="hidden-small">Swedish: </strong>Beginner</li>
                         </ul>
                         <br>
                     </div> <!-- end human-language class -->
@@ -317,7 +317,7 @@
                     </div> <!-- end class wrapper -->
                 </div> <!-- end class tech-languages -->
             </div>
-        </div> <!-- end class language -->
+        </div> <!-- end id language -->
     </section>
     <!-- end of the skills and expertise section -->
     <!-- ================================================================================================================================ -->
